[tool.poetry]
name = "ccc"
version = "0.1.0"
description = "CircleCI context commander"
authors = ["Jonas Eana <jonas@eana.ro>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.1"
boto3 = "1.14.38"
sh = "1.13.1"

[tool.poetry.dev-dependencies]
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
